# versalignLib

./: .gitignore  CMakeLists.txt  README.md
include/: AlignmentKernel.h  AlignmentLogger.h  AlignmentParameters.h
src/: CMakeLists.txt  CustomParameters.h  checkAVXSupport.cpp  main.cpp
src/Kernels/: CMakeLists.txt  SSEKernel.cpp  SSEKernel.h  SWKernel.cpp  SWKernel.h
src/Kernels/AVX-SSE/: AVXKernel.cpp  AVXKernel.h  AVXKernel_dllexport.cpp  CMakeLists.txt  SSEKernel.cpp  SSEKernel.h  SSEKernel_dllexport.cpp
src/Kernels/OpenCL/: CMakeLists.txt  OpenCLKernel.cpp  OpenCLKernel.h  OpenCLKernel_dllexport.cpp  ocl_testing.cpp  ocl_testing.h
src/Kernels/OpenCL/hexify/: hexify.cpp
src/Kernels/OpenCL/opencl_c/: alignment_kernels.cl  opencl_definitions.cl  scoring_kernels.cl  test_kernel.cl
src/Kernels/SSE/: CMakeLists.txt  SSEKernel.h
src/Kernels/default/: CMakeLists.txt  DefaultKernel.cpp  DefaultKernel.h  DefaultKernel_dllexport.cpp
src/Kernels/plain/: CMakeLists.txt  SWKernel.cpp  SWKernel.h  SWKernel_dllexport.cpp
src/Timer/: CMakeLists.txt  Timer.cpp  Timer.h
src/cmake/: CheckCompilerFlag.cmake
src/impl/: AVXSupportChecker.cpp  AVXSupportChecker.h  CMakeLists.txt  CustomLogger.h  CustomParameters.h  FastaProvider.h  dll_handling.cpp  dll_handling.h  main.cpp
src/util/: CMakeLists.txt  versalignUtil.cpp  versalignUtil.h
